<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="film_type">Type: %s</string>
    <string name="film_id">ImdbID: %s</string>
    <string name="film_rated"><![CDATA[<b>Rated</b>: %s]]></string>
    <string name="film_released"><![CDATA[<b>Released</b>: %s]]></string>
    <string name="film_duration"><![CDATA[<b>Duration</b>: %s]]></string>
    <string name="film_genres"><![CDATA[<b>Genres</b>: %s]]></string>
    <string name="film_director"><![CDATA[<b>Director</b>: %s]]></string>
    <string name="film_writer"><![CDATA[<b>Writer</b>: %s]]></string>
    <string name="film_actors"><![CDATA[<b>Actors</b>: %s]]></string>
    <string name="film_language"><![CDATA[<b>Language</b>: %s]]></string>
    <string name="film_country"><![CDATA[<b>Country</b>: %s]]></string>
    <string name="film_awards"><![CDATA[<b>Awards</b>: %s]]></string>
    <string name="film_imdbRating"><![CDATA[<b>ImdbRating</b>: %s]]></string>
    <string name="film_imdbVotes"><![CDATA[<b>ImdbVotes</b>: %s]]></string>
    <string name="film_production"><![CDATA[<b>Production</b>: %s]]></string>

    <string name="filmlist_search_hint">Search</string>
    <string name="film_error">Cannot load film\'s detailed info: %s</string>
    <string name="dialog_add_film_title">Add a film</string>
    <string name="dialog_add_film_edx_title">Title</string>
    <string name="dialog_add_film_title_hint_edx">Film name</string>
    <string name="dialog_add_film_type_edx">Type</string>
    <string name="dialog_add_film_type_hint_edx">Type</string>
    <string name="dialog_add_film_year_edx">Year</string>
    <string name="dialog_add_film_year_hint_edx">YYYY</string>
    <string name="dialog_add_film_id_edx">IMDBid</string>
    <string name="dialog_add_film_id_hint_edx">IMDBid</string>
    <string name="dialog_add_film_btn">OK</string>
</resources>